backend/deployment/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-backend
  labels:
    app: portal-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal-backend
  template:
    metadata:
      labels:
        app: portal-backend
    spec:
      containers:
        - name: portal-backend
          image: ghcr.io/hjmoons/devops-portal-backend:latest
          ports:
            - containerPort: 8090
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
