backend/deployment/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-backend
  labels:
    app: portal-backend
spec:
  type: ClusterIP
  ports:
    - port: 8090
      targetPort: 8090
      protocol: TCP
  selector:
    app: portal-backend
